added color transition, fixed top buttons

--- a/src/components/TopMenu/TopMenu.module.scss
+++ b/src/components/TopMenu/TopMenu.module.scss
@@ -63,3 +63,13 @@
         cursor: pointer;
     }
 }
+
+
+
+.top_list_item {
+
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    background-color: rgb(74, 148, 190);
+    padding: 10px 15px;
+
+}
