--- a/src/components/CustomNodes/BaseNode.module.scss
+++ b/src/components/CustomNodes/BaseNode.module.scss
@@ -20,7 +20,7 @@
         bottom: 0;
         z-index: 1000;
         opacity: 0.25;
-        background-image: radial-gradient(circle, #ffffff, #000000);
+        background-image: radial-gradient(circle, #ffffff, #7a7a7a);
         border-radius: 5px;
     }
 
@@ -47,8 +47,18 @@
     position: absolute;
     left: 7px;
     top: 4px;
-    font-size: 0.7rem;
-    color: $color-node-nav-icon;
+    font-size: 0.9rem;
+
+
+    &.dark-text {
+        color: rgb(255, 255, 255);
+        transition: color 1s ease;
+    }
+
+    &.light-text {
+        color: rgb(44, 149, 209);
+        transition: color 1s ease;
+    }
 }
 
 .node_title {
