--- a/src/components/RightPanel/RightPanel.module.scss
+++ b/src/components/RightPanel/RightPanel.module.scss
@@ -6,15 +6,47 @@
     right: 0;
     z-index: 1000;
 
-    @media print {
-        display: none;
-    }
+
 }
 
 .right_panel_container {
     position: relative;
-    width: 360px;
+
     height: 100vh;
     background-color: $bg-node-nav-container;
     box-shadow: $shadow-node-nav-container;
+
+    &.opened {
+        width: 360px;
+        background-color: $bg-node-nav-container;
+        transition: width 0.3s ease-out;
+
+    }
+
+    &.closed {
+        width: 0px;
+        transition: width 0.3s ease-out;
+
+    }
+}
+
+.toggle_btn {
+    position: absolute;
+    top: 0px;
+    left: -30px;
+    z-index: 1000;
+
+    button {
+        height: 56px;
+        border: 0;
+        width: 30px;
+        background-color: $bg-node-nav-container;
+        border-left: 1px solid rgb(207, 207, 207);
+        border-bottom: 1px solid rgb(207, 207, 207);
+        border-bottom-left-radius: 5px;
+        font-size: 1.3rem;
+        color: $color-node-nav-icon;
+        cursor: pointer;
+    }
+
 }
