--- a/src/components/TopMenu/TopMenu.module.scss
+++ b/src/components/TopMenu/TopMenu.module.scss
@@ -1,7 +1,7 @@
 @import "../../style/variables.scss";
 
 .wrapper {
-    background-color: rgb(255, 255, 255);
+    background-color: $bg-node-nav-container;
     z-index: 1000;
     padding: 0;
     height: 40px;
@@ -25,51 +25,3 @@
 
 }
 
-.nav_list {
-
-    ul {
-        display: flex;
-        padding-left: 20px;
-        margin: 0;
-    }
-
-    li {
-
-        list-style: none;
-        margin-right: 30px;
-        font-family: $font-node-nav-header;
-        font-weight: bold;
-        padding: 0;
-
-    }
-}
-
-.operations_btn_list {
-
-    display: flex;
-    justify-content: center;
-
-    ul {
-        display: flex;
-
-
-    }
-
-    button {
-        border: 0;
-        margin-right: 10px;
-        padding: 10px;
-        background-color: white;
-        cursor: pointer;
-    }
-}
-
-
-
-.top_list_item {
-
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-    background-color: rgb(74, 148, 190);
-    padding: 10px 15px;
-
-}
