--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -1,103 +1,132 @@
 @import "./variables.scss";
 
-
 //Right Panel
 @mixin section_header {
-    padding-top: 15px;
-    font-weight: bold;
-    font-family: $font-node-nav-header;
-    color: $color-node-nav-container-header;
-    font-size: 1.2rem;
-    margin-bottom: 15px;
+  padding-top: 15px;
+  font-weight: bold;
+  font-family: $font-node-nav-header;
+  color: $color-node-nav-container-header;
+  font-size: 1.2rem;
+  margin-bottom: 15px;
 }
 
 @mixin section_container {
-    h5 {
-        color: $color-node-nav-container-header;
-        text-align: left;
-        padding: 10px;
-        font-size: 1rem;
-        margin: 0;
-        font-family: $font-node-nav-header;
+  h5 {
+    color: $color-node-nav-container-header;
+    text-align: left;
+    padding: 10px;
+    font-size: 1rem;
+    margin: 0;
+    font-family: $font-node-nav-header;
 
-        background-color: $bg-node-nav-btn;
+    background-color: $bg-node-nav-btn;
+  }
+
+  ul {
+    padding: 0;
+    margin: 0;
+  }
+
+  li {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 3fr 9fr;
+    align-items: stretch;
+    justify-items: start;
+    padding-left: 10px;
+    height: 40px;
+    border-bottom: 1px solid rgb(238, 238, 238);
+  }
+
+  label {
+    font-family: $font-node-nav-list;
+    color: $color-node-nav-container-header;
+  }
+
+  .input_label {
+    border-right: 1px solid rgb(230, 230, 230);
+    display: flex;
+    align-items: center;
+    width: 100%;
+    font-size: 0.9rem;
+    text-align: start;
+  }
+
+  .radio_label {
+    margin-left: 10px;
+  }
+
+  input {
+    font-family: $font-node-nav-list;
+    outline: none;
+    margin-left: 10px;
+
+    &[type="text"] {
+      border: 0;
+      width: 100%;
     }
 
-    ul {
-        padding: 0;
-        margin: 0;
+    &[type="color"] {
+      border: 1px solid gainsboro;
+      border-radius: 3px;
+      background-color: $bg-node-nav-btn;
     }
+  }
 
-    li {
-        list-style: none;
-        display: grid;
-        grid-template-columns: 3fr 9fr;
-        align-items: stretch;
-        justify-items: start;
-        padding-left: 10px;
-        height: 40px;
-        border-bottom: 1px solid rgb(238, 238, 238);
-    }
+  button {
+    font-family: $font-node-nav-list;
+    width: 100%;
+    height: 40px;
+    border: 0;
+    background-color: $bg-node-nav-btn;
+    color: $color-node-nav-btn;
+    font-weight: bold;
+    box-shadow: $shadow-node-nav-btn;
+    text-align: left;
+    padding-left: 45px;
+  }
 
-    label {
-        font-family: $font-node-nav-list;
-        color: $color-node-nav-container-header;
+  .color_input {
+    display: flex;
+    align-items: center;
+  }
 
-    }
+  .radio {
+    display: flex;
+    width: 100%;
+    align-items: center;
+  }
+}
 
-    .input_label {
-        border-right: 1px solid rgb(230, 230, 230);
-        display: flex;
-        align-items: center;
-        width: 100%;
-        font-size: 0.9rem;
-        text-align: start;
-    }
+@mixin dropdown_menu {
+  position: absolute;
+  top: 35px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  padding: 5px;
+  border-radius: 3px;
+  ul {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    text-align: left;
+  }
 
-    .radio_label {
-        margin-left: 10px;
-    }
+  li {
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+    width: 100%;
+  }
+}
 
+@mixin dropdown_menu_icon {
+  display: flex;
+  justify-content: center;
+  color: $color-node-nav-icon;
+}
 
-
-    input {
-        font-family: $font-node-nav-list;
-        outline: none;
-        margin-left: 10px;
-
-        &[type="text"] {
-            border: 0;
-            width: 100%;
-        }
-
-        &[type="color"] {
-            border: 1px solid gainsboro;
-            border-radius: 3px;
-            background-color: $bg-node-nav-btn;
-        }
-    }
-
-    button {
-        font-family: $font-node-nav-list;
-        width: 100%;
-        height: 40px;
-        border: 0;
-        background-color: $bg-node-nav-btn;
-        color: $color-node-nav-btn;
-        font-weight: bold;
-        box-shadow: $shadow-node-nav-btn;
-        text-align: left;
-        padding-left: 45px;
-    }
-
-    .color_input {
-        display: flex;
-        align-items: center;
-    }
-
-    .radio {
-        display: flex;
-        width: 100%;
-        align-items: center;
-    }
+@mixin dropdown_menu_section_title {
+  text-align: left;
+  margin-bottom: 5px;
+  border-bottom: 1px solid rgb(230, 230, 230);
 }
