started working on groups

--- a/src/components/LeftPanel/LeftPanel.module.scss
+++ b/src/components/LeftPanel/LeftPanel.module.scss
@@ -1,76 +1,99 @@
 @import "../../style/variables.scss";
+@import "../../style/mixins.scss";
 
 .wrapper {
-    position: fixed;
-    top: 41px;
-    left: 0;
-    z-index: 100;
-
+  position: fixed;
+  top: 41px;
+  left: 0;
+  z-index: 100;
 }
 
 .add_node_container {
-    position: relative;
+  position: relative;
 
-    height: 100vh;
-    background-color: $bg-node-nav-container;
-    box-shadow: $shadow-node-nav-container;
+  height: 100vh;
+  background-color: $bg-node-nav-container;
+  box-shadow: $shadow-node-nav-container;
 
-    &.opened {
-        width: 280px;
+  &.opened {
+    width: 280px;
+  }
+
+  &.closed {
+    width: 0px;
+
+    .header,
+    .node_list {
+      display: none;
     }
+  }
 
-    &.closed {
-        width: 0px;
-
-        .header,
-        .node_list {
-            display: none;
-        }
-
-    }
-
-    transition: width 0.3s ease-out;
+  transition: width 0.3s ease-out;
 }
 
 .header {
-    padding-top: 15px;
-    font-weight: bold;
-    font-family: $font-node-nav-header;
-    color: $color-node-nav-container-header;
-    font-size: 1.8rem;
-
+  padding-top: 15px;
+  font-weight: bold;
+  font-family: $font-node-nav-header;
+  color: $color-node-nav-container-header;
+  font-size: 1.8rem;
 }
 
 .node_list {
-    h5 {
-        color: $color-node-nav-container-header;
-        text-align: left;
-        padding-left: 20px;
-        font-family: $font-node-nav-list;
-    }
+  h5 {
+    color: $color-node-nav-container-header;
+    text-align: left;
+    padding-left: 20px;
+    font-family: $font-node-nav-list;
+  }
 }
 
 .node_list_disabled {
-    height: 20px;
+  height: 20px;
 }
 
 .toggle_btn {
-    position: absolute;
-    top: 0px;
-    right: -30px;
-    z-index: 1000;
+  position: absolute;
+  top: 0px;
+  right: -30px;
+  z-index: 1000;
 
-    button {
-        height: 57px;
-        border: 0;
-        width: 30px;
-        background-color: $bg-node-nav-container;
-        border-right: 1px solid rgb(207, 207, 207);
-        border-bottom: 1px solid rgb(207, 207, 207);
-        border-bottom-right-radius: 5px;
-        font-size: 1.3rem;
-        color: $color-node-nav-icon;
-        cursor: pointer;
-    }
+  button {
+    height: 57px;
+    border: 0;
+    width: 30px;
+    background-color: $bg-node-nav-container;
+    border-right: 1px solid rgb(207, 207, 207);
+    border-bottom: 1px solid rgb(207, 207, 207);
+    border-bottom-right-radius: 5px;
+    font-size: 1.3rem;
+    color: $color-node-nav-icon;
+    cursor: pointer;
+  }
+}
 
+.create_group {
+  position: absolute;
+  bottom: 45px;
+  
+  left: 0;
+  right: 0;
+
+  height: 50px;
+
+  .create_group_btn {
+    @include left_panel_btn($color-node-nav-icon);
+    box-shadow: $shadow-node-nav-btn;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    padding-left: 0;
+    border-bottom: 0;
+    width: 150px;
+    border-radius: 5px;
+    background-color: $color-node-nav-icon;
+    color: rgb(253, 253, 253);
+
+
+  }
 }
