--- a/src/components/LeftPanel/NodeListItem/NodeListItem.module.scss
+++ b/src/components/LeftPanel/NodeListItem/NodeListItem.module.scss
@@ -1,18 +1,10 @@
 @import "../../../style/variables.scss";
+@import "../../../style/mixins.scss";
 
 
 
 .node_list_btn {
-    font-family: $font-node-nav-list;
-    width: 100%;
-    height: 40px;
-    border: 0;
-    background-color: $bg-node-nav-btn;
-    color: $color-node-nav-btn;
-    font-weight: bold;
-    border-bottom: 1px solid rgb(219, 219, 219);
-    text-align: left;
-    padding-left: 45px;
+    @include left_panel_btn($bg-node-nav-btn);
 
 }
 
