--- a/src/components/RightPanel/Properties/Properties.module.scss
+++ b/src/components/RightPanel/Properties/Properties.module.scss
@@ -2,6 +2,13 @@
 
 .section_container {
     @include section_container;
+
+    input[type="color"]{
+        background-color: white;
+        border: 0;
+        border-radius: 50%;
+        
+    }
 }
 
 .section_header {
