--- a/src/components/TopMenu/LeftList/LeftList.module.scss
+++ b/src/components/TopMenu/LeftList/LeftList.module.scss
@@ -1,26 +1,20 @@
 @import "../../../style/variables.scss";
 
 .nav_list {
+  display: flex;
+  padding-left: 20px;
+  margin: 0;
 
-    ul {
-        display: flex;
-        padding-left: 20px;
-        margin: 0;
-    }
-
-    li {
-
-        list-style: none;
-        margin-right: 30px;
-        font-family: $font-node-nav-header;
-        font-weight: bold;
-        padding: 0;
-        cursor: pointer;
-    }
+  .nav_list_item {
+    list-style: none;
+    margin-right: 30px;
+    font-family: $font-node-nav-header;
+    font-weight: bold;
+    padding: 0;
+    cursor: pointer;
+  }
 }
 
-
-
-.view_section_hidden{
-    display: none;
+.view_section_hidden {
+  display: none;
 }
