--- a/src/components/LeftPanel/LeftPanel.module.scss
+++ b/src/components/LeftPanel/LeftPanel.module.scss
@@ -7,11 +7,13 @@
   left: 0;
   z-index: 100;
 
+
 }
 
 .add_node_container {
-  position: relative;
 
+  position: relative;
+  overflow-x: auto;
   height: 100vh;
   background-color: $bg-node-nav-container;
   box-shadow: $shadow-node-nav-container;
