--- a/src/components/RightPanel/Properties/Properties.module.scss
+++ b/src/components/RightPanel/Properties/Properties.module.scss
@@ -9,6 +9,21 @@
         border-radius: 50%;
 
     }
+
+    
+  .properties_list {
+    li{
+     
+        display: grid;
+        grid-template-columns: 3fr 9fr;
+        align-items: stretch;
+        justify-items: start;
+        padding-left: 10px;
+        height: 40px;
+        border-bottom: 1px solid rgb(238, 238, 238);
+    }
+    
+  }
 }
 
 .section_header {
@@ -19,10 +34,30 @@
     max-height: 400px;
     overflow-y: auto;
     overflow-x: hidden;
-
-    li {
+    li{
+       
+        font-size: 0.75rem;
+        border-bottom: 1px solid rgb(238, 238, 238);
+        padding-left: 10px;
+        height: 40px;
         display: grid;
-        grid-template-columns: 6fr 6fr;
+        grid-template-columns: 150px 150px;   
+        justify-items: start;
+  
     }
 
 }
+
+
+.input_label {
+    border-right: 1px solid rgb(230, 230, 230);
+    display: flex;
+    align-items: center;
+    width: 100%;
+    font-size: 0.7rem;
+    text-align: start;
+  }
+
+  .radio_label {
+    margin-left: 10px;
+  }
