--- a/src/components/CustomNodes/BaseNode.module.scss
+++ b/src/components/CustomNodes/BaseNode.module.scss
@@ -12,7 +12,7 @@
 }
 
 .node_body {
-    width: 150px;
+    min-width: 150px;
     min-height: 50px;
     border-radius: 5px;
     line-break: auto;
@@ -73,11 +73,11 @@
 
 .node_title {
     position: absolute;
-    top:5px;
+    top: 5px;
     right: 10px;
     font-style: italic;
-    
-  font-size: 0.7rem;
+
+    font-size: 0.7rem;
 }
 
 .node_label {
