--- a/src/components/CustomNodes/BaseNode.module.scss
+++ b/src/components/CustomNodes/BaseNode.module.scss
@@ -12,6 +12,7 @@
 }
 
 .node_body {
+    padding: 10px;
     min-width: 150px;
     min-height: 50px;
     border-radius: 5px;
@@ -20,6 +21,7 @@
     font-family: $font-node-nav-header;
     font-weight: bolder;
     font-size: 1.1rem;
+    letter-spacing: 1px;
 
     &::after {
         content: "";
@@ -86,26 +88,26 @@
 }
 
 .handle {
-    border: 0;
-    border-radius: 0;
+    border: 0 !important;
+    border-radius: 0 !important;
 
-    background-color: $color-node-nav-icon;
+    background-color: $color-node-nav-icon !important;
 
-    width: 12px;
-    height: 45px;
-    z-index: 9999;
-    opacity: 0.5;
+    width: 12px !important;
+    height: 45px !important;
+    z-index: 9999 !important;
+    opacity: 0.5 !important;
 
     &.right {
-        right: -12px;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
+        right: -12px !important;
+        border-top-right-radius: 5px !important;
+        border-bottom-right-radius: 5px !important;
     }
 
     &.left {
-        left: -12px;
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
+        left: -12px !important;
+        border-top-left-radius: 5px !important;
+        border-bottom-left-radius: 5px !important;
     }
 
 
