--- a/src/components/RightPanel/RightPanel.module.scss
+++ b/src/components/RightPanel/RightPanel.module.scss
@@ -17,7 +17,7 @@
     box-shadow: $shadow-node-nav-container;
 
     &.opened {
-        width: 360px;
+        width: 23vw;
         background-color: $bg-node-nav-container;
         transition: width 0.3s ease-out;
 
