--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -21,6 +21,7 @@ $color-node-nav-icon-light: "white";
 $shadow-node-nav-container: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 $shadow-top-menu-btn:  rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 $shadow-node-nav-btn: none;
+$shadow-inset:  rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 
 //--FONTS--
 $font-node-nav-list: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
