--- a/src/components/RightPanel/Properties/Properties.module.scss
+++ b/src/components/RightPanel/Properties/Properties.module.scss
@@ -41,7 +41,7 @@
         padding-left: 10px;
         height: 40px;
         display: grid;
-        grid-template-columns: 150px 150px;   
+        grid-template-columns: 6fr 6fr;   
         justify-items: start;
   
     }
