--- a/src/components/RightPanel/ValueEditor/ValueEditor.module.scss
+++ b/src/components/RightPanel/ValueEditor/ValueEditor.module.scss
@@ -23,6 +23,6 @@
         outline: none;
         border: 1px solid rgb(228, 228, 228);
         background-color: rgb(248, 248, 248);
-        box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+        box-shadow:$shadow-inset;
     }
 }
