--- a/src/components/RightPanel/Properties/Properties.module.scss
+++ b/src/components/RightPanel/Properties/Properties.module.scss
@@ -1,63 +1,65 @@
 @import "../../../style/mixins.scss";
 
 .section_container {
-    @include section_container;
+  @include section_container;
 
-    input[type="color"] {
-        background-color: white;
-        border: 0;
-        border-radius: 50%;
+  input[type="color"] {
+    background-color: white;
+    border: 0;
+    border-radius: 50%;
 
-    }
+  }
 
-    
+
   .properties_list {
-    li{
-     
-        display: grid;
-        grid-template-columns: 3fr 9fr;
-        align-items: stretch;
-        justify-items: start;
-        padding-left: 10px;
-        height: 40px;
-        border-bottom: 1px solid rgb(238, 238, 238);
+    li {
+
+      display: grid;
+      grid-template-columns: 3fr 9fr;
+      align-items: stretch;
+      justify-items: start;
+      padding-left: 10px;
+      height: 40px;
+      border-bottom: 1px solid rgb(238, 238, 238);
     }
-    
+
   }
 }
 
 .section_header {
-    @include section_header;
+  @include section_header;
 }
 
 .block_section {
-    max-height: 400px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    li{
-       
-        font-size: 0.75rem;
-        border-bottom: 1px solid rgb(238, 238, 238);
-        padding-left: 10px;
-        height: 40px;
-        display: grid;
-        grid-template-columns: 6fr 6fr;   
-        justify-items: start;
-  
-    }
+  max-height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  li {
+
+    font-size: 0.75rem;
+    border-bottom: 1px solid rgb(238, 238, 238);
+    padding-left: 10px;
+    height: 40px;
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+    justify-items: start;
+    position: relative;
+    
+  }
 
 }
 
 
 .input_label {
-    border-right: 1px solid rgb(230, 230, 230);
-    display: flex;
-    align-items: center;
-    width: 100%;
-    font-size: 0.7rem;
-    text-align: start;
-  }
+  border-right: 1px solid rgb(230, 230, 230);
+  display: flex;
+  align-items: center;
+  width: 100%;
+  font-size: 0.7rem;
+  text-align: start;
+}
 
-  .radio_label {
-    margin-left: 10px;
-  }
+.radio_label {
+  margin-left: 10px;
+}
