--- a/src/components/Substitutions/Substitutions.module.scss
+++ b/src/components/Substitutions/Substitutions.module.scss
@@ -1,43 +1,43 @@
 @import "../../style/variables.scss";
 
 .wrapper {
-    position:sticky;
+    position: sticky;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 10px;
     font-family: $font-node-nav-header;
     font-weight: bold;
-    
+
     z-index: 9999;
 }
 
-.content{
-   
+.content {
+
     border: 1px solid rgb(239, 239, 239);
     margin-left: auto;
     margin-right: auto;
-    background-color:white;
+    background-color: white;
     margin-bottom: 0;
     width: 800px;
     border-radius: 5px;
-    
+
 }
 
-.icon{
+.icon {
     color: $color-node-nav-icon;
     margin-bottom: 0;
     padding-bottom: 0;
 }
 
-.expandable_content{
-    
-    &.expanded{
+.expandable_content {
+
+    &.expanded {
         display: inline;
-        
-        
+
+
     }
 
-    &.collapsed{
+    &.collapsed {
         display: none;
     }
 }
@@ -63,15 +63,15 @@
         }
     }
 
-    input{
+    input {
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
         height: 17px;
         border: 2px solid rgb(182, 182, 182);
     }
 
-    button{
-        background-color:$bg-top-menu-btn-default;
+    button {
+        background-color: $bg-top-menu-btn-default;
         color: white;
         border: 0;
         border-top-right-radius: 3px;
@@ -81,11 +81,13 @@
 }
 
 .body {
- 
-    min-height: 120px;
+
+    height: 120px;
+    overflow-y: auto;
+
     padding: 10px;
     font-size: 0.8rem;
     background-color: rgb(245, 245, 245);
     border: 1px solid rgb(231, 231, 231);
-   
+
 }
