--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -31,6 +31,7 @@
   color: $color-node-nav-container-header;
   font-size: 1.2rem;
   margin-bottom: 15px;
+  text-align: center;
 }
 
 @mixin section_container {
