--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,4 @@
-.App {
-  text-align: center;
-  
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -38,7 +9,44 @@
   }
 }
 
+.dynamic_menu{
+  position: absolute;
+  overflow: hidden;
+  top: 40px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: grid;
+  
+  grid-template-columns:  1.4fr 6fr 1.4fr;
+}
+
 
 .react-flow__attribution a{
   display: none;
 }
+
+/* Customize the scrollbar track */
+::-webkit-scrollbar {
+  width: 5px; /* Width of the scrollbar */
+  height: 5px;
+  background-color: rgb(213, 232, 243)
+}
+
+/* Customize the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: rgb(74, 148, 190);
+  border-radius: 6px; /* Rounded corners for the thumb */
+  
+}
+
+/* Customize the scrollbar track on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color:rgb(31, 108, 153); /* Color of the thumb on hover */
+}
+
+/* Customize the scrollbar track when pressed */
+::-webkit-scrollbar-thumb:active {
+  background-color:rgb(24, 82, 116);/* Color of the thumb when pressed */
+}
+
