--- a/src/components/RightPanel/RightPanel.module.scss
+++ b/src/components/RightPanel/RightPanel.module.scss
@@ -1,30 +1,28 @@
 @import "../../style/variables.scss";
 
 .wrapper {
-    position: fixed;
-    top: 41px;
-    right: 0;
+
     z-index: 100;
-
-
+    position: relative;
+    display: flex;
+    justify-content: right;
 }
 
 .right_panel_container {
-    position: relative;
 
     height: 100vh;
     background-color: $bg-node-nav-container;
     box-shadow: $shadow-node-nav-container;
 
     &.opened {
-        width: 23vw;
+        width: 100%;
         background-color: $bg-node-nav-container;
         transition: width 0.3s ease-out;
 
     }
 
     &.closed {
-        width: 0px;
+        width: 0;
         transition: width 0.3s ease-out;
 
     }
@@ -33,8 +31,17 @@
 .toggle_btn {
     position: absolute;
     top: 0px;
-    left: -30px;
+    
     z-index: 1000;
+
+    &.opened{
+        left: -30px;
+        
+    }
+
+    &.closed{
+        right: 0;
+    }
 
     button {
         height: 56px;
