--- a/src/components/Substitutions/Substitutions.module.scss
+++ b/src/components/Substitutions/Substitutions.module.scss
@@ -1,29 +1,28 @@
 @import "../../style/variables.scss";
+@import "../../style/mixins.scss";
 
 .wrapper {
-    position: sticky;
-    left: 0;
-    right: 0;
-    bottom: 10px;
+    position: relative;
     font-family: $font-node-nav-header;
     font-weight: bold;
 
-    z-index: 9999;
 }
 
 .content {
+    position: absolute;
+    bottom: 40px;
+    z-index: 9999;
 
     border: 1px solid rgb(239, 239, 239);
     margin-left: auto;
     margin-right: auto;
     background-color: white;
     margin-bottom: 0;
-    width: 800px;
-    border-radius: 5px;
 
 }
 
 .icon {
+    text-align: center;
     color: $color-node-nav-icon;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -32,26 +31,36 @@
 .expandable_content {
 
     &.expanded {
-        display: inline;
+        height: 200px;
+        transition: height 0.3s ease-out;
 
 
     }
 
     &.collapsed {
-        display: none;
+        height: 0;
+        transition: height 0.3s ease-out;
     }
 }
 
 
 .header {
-    color: $color-node-nav-container-header;
+    @include section_header;
+    padding-bottom: 0;
+    margin-bottom: 10px;
+    padding-top: 0;
 }
 
 
 .sub_header {
+   
+    &.collapsed{
+        display: none;
+    }
+    
     font-size: 0.9rem;
     margin-bottom: 10px;
-
+    text-align: center;
     ul {
         display: flex;
         padding-left: 10px;
@@ -66,8 +75,9 @@
     input {
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
-        height: 17px;
-        border: 2px solid rgb(182, 182, 182);
+        height: 18px;
+        border: 1px solid rgb(182, 182, 182);
+        outline: none;
     }
 
     button {
@@ -78,13 +88,19 @@
         border-bottom-right-radius: 3px;
         height: 22px;
     }
+
+    span{
+        position: absolute;
+        padding-left: 10px;
+        color: red;
+        font-style: italic;
+    }
 }
 
 .body {
 
     height: 120px;
     overflow-y: auto;
-
     padding: 10px;
     font-size: 0.8rem;
     background-color: rgb(245, 245, 245);
