--- a/src/components/Substitutions/SubstitutionsTable/SubstitutionsTable.module.scss
+++ b/src/components/Substitutions/SubstitutionsTable/SubstitutionsTable.module.scss
@@ -8,11 +8,11 @@
         table-layout: fixed;
         border-collapse: collapse;
         text-align: left;
-
+        
 
         th,
         td {
-            border: 1px solid black;
+            border: 1px solid rgb(226, 226, 226);
             background-color: rgb(255, 255, 255);
             padding: 0;
             margin: 0;
@@ -23,7 +23,7 @@
         }
 
         td {
-            font-weight: lighter;
+
             height: 25px;
 
         }
@@ -32,6 +32,8 @@
             width: 95%;
             overflow-x: auto;
             border: none;
+            font-family: $font-node-nav-header;
+            font-weight: bold;
         }
 
         span {
@@ -49,13 +51,6 @@
 
         }
 
-
-
-
-
     }
-
-
-
 
 }
