--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -25,4 +25,12 @@ $shadow-inset:  rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.
 
 //--FONTS--
 $font-node-nav-list: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 $font-node-nav-header: 'BlockMenuHeader';
+
+//--BREAKPOINTS--
+$breakpoint-xs: 576px;
+$breakpoint-sm: 768px;
+$breakpoint-md: 992px;
+$breakpoint-lg: 1200px;
+
