--- a/src/components/RightPanel/FilteredResults/FilteredResults.module.scss
+++ b/src/components/RightPanel/FilteredResults/FilteredResults.module.scss
@@ -7,6 +7,7 @@
     ul {
         min-width: 150px;
         border: 1px solid rgb(168, 168, 168);
+        list-style: none;
     }
     li{
         background-color: white;
