added server page, populated data from api

--- a/src/components/Designer/TopMenu/TopMenu.module.scss
+++ b/src/components/Designer/TopMenu/TopMenu.module.scss
@@ -10,7 +10,7 @@
     border-bottom: 1px solid rgb(241, 241, 241);
     position: fixed;
     display: grid;
-    grid-template-columns: 4fr 4fr 4fr;
+    grid-template-columns: 6fr 6fr;
     align-items: center;
     align-content: center;
     top: 0;
