added modal windows on save/update flow

--- a/src/components/Modals/ModalWindow.module.scss
+++ b/src/components/Modals/ModalWindow.module.scss
@@ -54,7 +54,7 @@
 
     .buttons_wrapper {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
         gap: 10px;
 
         button {
