--- a/src/components/Designer/RightPanel/RightPanel.module.scss
+++ b/src/components/Designer/RightPanel/RightPanel.module.scss
@@ -14,14 +14,14 @@
     }
 
     &.closed {
-        translate: (300px);
+        translate: (100%);
     }
 
     transition: translate 0.3s ease-out;
 }
 
 .right_panel_container {
-
+    width: 100%;
     height: 100vh;
     background-color: $bg-node-nav-container;
     box-shadow: $shadow-node-nav-container;
@@ -34,15 +34,8 @@
     top: 0px;
 
     z-index: 1000;
+    left: -30px;
 
-    &.opened {
-        left: -30px;
-
-    }
-
-    &.closed {
-        left: -60px;
-    }
 
     button {
         height: 56px;
