--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -5,13 +5,14 @@ $bg-node-nav-container: rgb(255, 255, 255);
 
 //buttons bg colors
 $bg-node-nav-btn : rgb(236, 236, 236);
-$bg-top-menu-btn-default:rgb(74, 148, 190);
-$bg-top-menu-btn-hover:rgb(55, 109, 139);
-$bg-top-menu-btn-active:rgb(39, 74, 94);
+$bg-top-menu-btn-default: rgb(74, 148, 190);
+$bg-top-menu-btn-hover: rgb(55, 109, 139);
+$bg-top-menu-btn-active: rgb(39, 74, 94);
 
 //--COLORS--
 $color-node-nav-container-header: rgb(114, 114, 114);
 $color-node-nav-btn: rgb(31, 31, 31);
+$color-list-border: rgb(238, 238, 238);
 
 //icons colors
 $color-node-nav-icon: rgb(35, 124, 175);
@@ -19,9 +20,9 @@ $color-node-nav-icon-light: "white";
 
 //--SHADOWS--
 $shadow-node-nav-container: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-$shadow-top-menu-btn:  rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+$shadow-top-menu-btn: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 $shadow-node-nav-btn: none;
-$shadow-inset:  rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+$shadow-inset: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 
 //--FONTS--
 $font-node-nav-list: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -32,4 +33,3 @@ $breakpoint-xs: 576px;
 $breakpoint-sm: 768px;
 $breakpoint-md: 992px;
 $breakpoint-lg: 1200px;
-
