--- a/src/components/Designer/RightPanel/Properties/Base/Base.module.scss
+++ b/src/components/Designer/RightPanel/Properties/Base/Base.module.scss
@@ -13,12 +13,17 @@
 
   }
 
+  input {
+    @include overflow_input(150px);
+
+  }
 
   input[type="color"] {
     background-color: white;
     border: 0;
     border-radius: 50%;
     margin-top: 5px;
+
 
   }
 
@@ -29,6 +34,8 @@
     width: 100%;
     font-size: 0.7rem;
     text-align: start;
+
+
   }
 
 
