--- a/src/components/Designer/RightPanel/Properties/FlowProperties/FlowProperties.module.scss
+++ b/src/components/Designer/RightPanel/Properties/FlowProperties/FlowProperties.module.scss
@@ -1,3 +1,5 @@
+@import '/src/style/mixins.scss';
+
 .properties_list {
   li {
     display: grid;
@@ -10,12 +12,18 @@
 
   }
 
+  input {
+    @include overflow_input(150px)
+  }
+
+
 
   input[type="color"] {
     background-color: white;
     border: 0;
     border-radius: 50%;
     margin-top: 5px;
+
 
   }
 
