--- a/src/components/Server/CenterPanel/Servers/Servers.module.scss
+++ b/src/components/Server/CenterPanel/Servers/Servers.module.scss
@@ -7,7 +7,20 @@
   font-family: $font-node-nav-header;
   font-weight: bold;
 
+  .header {
+    display: grid;
+    grid-template-columns: 4fr 4fr 4fr;
+  }
+
+  .server_status {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 20px;
+  }
+
   .header_buttons {
+    grid-column: 2;
     height: 30px;
     display: flex;
     justify-content: center;
