--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -136,6 +136,23 @@
   }
 }
 
+@mixin server_header_btn {
+
+  background-color: white;
+  border: 0;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-family: $font-node-nav-header;
+  font-weight: bold;
+
+  &:hover {
+    background-color: rgb(148, 200, 230);
+  }
+
+  transition: background-color 0.2s ease-in-out;
+
+}
+
 @mixin disabled_input {
   background-color: rgb(218, 218, 218);
   padding-left: 5px;
